# 2D-RPG-Game_Project

./: .gitignore  CMakeLists.txt  README.md
assets/: README.md
assets/fonts/: README.md
assets/images/: README.md
assets/sounds/: README.md
config/: README.md
docs/: README.md
include/: README.md
libs/: README.md
sources/: CMakeLists.txt  main.cpp
sources/character_control/include/: README.md
sources/character_control/src/: README.md
sources/entities/: CMakeLists.txt
sources/entities/characters/include/: README.md  character.h  player_character.h
sources/entities/characters/src/: README.md  character.cpp  player_character.cpp
sources/entities/enemies/include/: README.md
sources/entities/enemies/src/: README.md
sources/game/include/: game.h
sources/game/src/: game.cpp
sources/gfx/: CMakeLists.txt
sources/gfx/render/include/: background_renderer.h  character_renderer.h  gui_renderer.h  i_camera.h  i_renderable.h  i_renderer.h  render_context.h  renderable.h  renderer_factory.h  renderer_manager.h
sources/gfx/render/src/: background_renderer.cpp  character_renderer.cpp  gui_renderer.cpp  renderer_factory.cpp  renderer_manager.cpp
sources/gfx/renderer/include/: renderer_manager.h
sources/gfx/renderer/src/: renderer_manager.cpp
sources/gfx/texture/include/: texture_manager.h
sources/gfx/texture/src/: texture_manager.cpp
sources/kernel/: CMakeLists.txt
sources/kernel/include/: camera.h  game_loop.h
sources/kernel/input/: CMakeLists.txt
sources/kernel/input/include/: input_manager.h  key_input.h
sources/kernel/input/src/: input_manager.cpp  key_input.cpp
sources/kernel/src/: camera.cpp  game_loop.cpp
sources/persistence/src/: README.md
sources/platform/: CMakeLists.txt
sources/platform/inlcude/: sdl_context.h  window.h
sources/platform/src/: sdl_context.cpp  window.cpp
sources/ui/: CMakeLists.txt
sources/ui/elements/include/: background_element.h  gui_element_base.h  i_gui_element.h  texture_element.h
sources/ui/elements/src/: background_element.cpp  i_gui_element.cpp  texture_element.cpp
sources/ui/window/include/: window.h
sources/ui/window/src/: window.cpp
sources/utils/: CMakeLists.txt
sources/utils/include/: factory.h  logger.h
sources/utils/src/: logger.cpp
src/: CMakeLists.txt  main.cpp
src/characterControl/: README.md
src/characterControl/include/: README.md
src/characterControl/src/: README.md
src/character_control/: README.md
src/kernel/: CMakeLists.txt  README.md
src/kernel/include/: README.md  game_loop.h  gameloop.h
src/kernel/src/: README.md  game_loop.cpp  gameloop.cpp
src/persistence/: README.md
src/persistence/include/: README.md
src/persistence/src/: README.md
src/ui/: CMakeLists.txt  README.md
src/ui/include/: gui_element_base.h  i_gui_element.h  renderer_manager.h  texture_element.h  texture_manager.h  window.h
src/ui/src/: i_gui_element.cpp  renderer_manager.cpp  texture_element.cpp  texture_manager.cpp  window.cpp
src/utils/: CMakeLists.txt  README.md
src/utils/include/: README.md
src/utils/src/: README.md  logger.cpp
src/window/: CMakeLists.txt  README.md
src/window/include/: README.md  windowcreator.h
src/window/src/: README.md  windowcreator.cpp
tests/: README.md
